# dotfiles

./: .Xresources  .bash_logout  .bash_profile  .bashrc  .gtkrc-2.0  .profile  .xinitrc  .xsettingsd
.config/: alacritty.toml  mimeapps.list  pavucontrol.ini  picom.conf  user-dirs.dirs
.config/VSCodium/: product.json
.config/VSCodium/User/: keybindings.json  settings.json
.config/btop/: btop.conf
.config/cabal/: config
.config/clipcat/: clipcatd.toml
.config/cudatext/settings/: Makefile.cuda-lexops  lexer C.json  packages.ini  plugins.ini  user.json
.config/dconf/: user
.config/dunst/: dunstrc
.config/fontconfig/conf.d/: 90-aliases.conf
.config/gtk-3.0/: gtk.css
.config/lf/: bashrc  lfrc
.config/mpd/: mpd.conf
.config/mpv/: input.conf
.config/ncmpcpp/: bindings  config
.config/nemo/: desktop-metadata
.config/sxhkd/: sxhkdrc
.config/xfce4/: helpers.rc  xfce4-screenshooter
.config/xfce4/panel/: whiskermenu-1.rc
.config/xfce4/panel/launcher-11/: 16225998791.desktop
.config/xfce4/panel/launcher-12/: 16290127501.desktop
.config/xkb/symbols/: capslock_to_hyper  menu_to_super
.config/xmobar/: cabal.project.local  xmobar-configuration.cabal
.config/xmobar/src/: Main.hs  RawCommandReader.hs
.config/xmonad/: build  xmonad-configuration.cabal
.config/xmonad/src/: Main.hs
.emacs.d/: init.el
.local/share/applications/: chromium.desktop  codium.desktop  cudatext.desktop  file-manager.desktop  freetube.desktop  mount-file-rw.desktop  mount-file.desktop  text-editor.desktop  www-browser.desktop
.local/src/emenus/: emount.vala  eopen.vala  eunmount.vala  meson.build  util.vala
(+26 files in other folders)
