cabal-version: 3.0
name:          xmobar-configuration
version:       0.0.0.0
build-type:    Simple

common warnings
  ghc-options: -Wall

executable xmobar
  import: warnings
  main-is: Main.hs
  other-modules: RawCommandReader
  hs-source-dirs: src
  build-depends: base ^>=4.18.3.0,
                 xmobar >=0.18.0,
                 containers >=0.6.7,
                 process >=1.6.19
  default-language: GHC2021
